# DjangoSkillboxProject

./: Dockerfile  demo.py  devices.csv  docker-compose.yaml  pyproject.toml  quieries.sql  requirements.txt
DRF/: requirements.txt
DRF/mysite/shopapp/: views.py
Django_Cache/mysite/: shopapp-products-fixtures.json  shopapp-products-fixtures.xml  shopapp-products.json
Django_Cache/mysite/mysite/: settings.py  sitemaps.py
Django_Cache/mysite/shopapp/: views.py
Docs/mysite/: shopapp-fixtures.json
Docs/mysite/myapiapp/: apps.py  urls.py  views.py
Docs/mysite/mysite/: settings.py  urls.py
Docs/mysite/shopapp/: views.py
M_06_Forms/mysite/shopapp/: admin.py  models.py
M_07_CBV/: README.md
M_07_CBV/mysite/shopapp/: models.py
M_09_permissions/: README.md
M_09_permissions/mysite/myauth/: urls.py  views.py
M_09_permissions/mysite/shopapp/: views.py
M_10_Testing/mysite/myauth/: urls.py  views.py
M_10_Testing/mysite/shopapp/: views.py
M_11_Files/mysite/myauth/: views.py
M_11_Files/mysite/mysite/: urls.py
M_12_i18n_l10n/: requirements.txt
M_12_i18n_l10n/mysite/mysite/: settings.py
M_12_i18n_l10n/mysite/shopapp/: models.py
first_django_project/: Pipfile  log.txt  log.txt.1  requirements.txt  shopapp-products-fixtures.json  shopapp-products-fixtures.xml  textfile.txt
first_django_project/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
first_django_project/first_django_project/: settings.py  sitemaps.py  urls.py
first_django_project/myapiapp/: urls.py  views.py
first_django_project/myauth/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
first_django_project/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
first_django_project/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  utils.py  views.py
prod/: requirements.txt
prod/mysite/blogapp/: sitemap.py  urls.py  (+1 more)
(+84 files in other folders)
