[tool.poetry]
name = "python-django-1"
version = "0.1.0"
description = ""
authors = ["Владимир С."]


[tool.poetry.dependencies]
asgiref = "^3.7.2"
attrs = "^23.1.0"
certifi = "^2022.12.7"
charset-normalizer = "^2.1.1"
distlib = "^0.3.6"
django = "^4.2.6"
django-cors-headers = "^4.2.0"
django-debug-toolbar = "^4.2.0"
django-filter = "^23.3"
django-grappelli = "^3.0.6"
django-multiupload = "^0.6.1"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.14.0"
docutils = "^0.20.1"
drf-spectacular = "^0.26.4"
filelock = "^3.9.0"
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"
gunicorn = "^21.2.0"
idna = "^3.4"
inflection = "^0.5.1"
jsonschema = "^4.19.0"
jsonschema-specifications = "^2023.7.1"
mccabe = "^0.7.0"
peewee = "^3.15.4"
pillow = "^10.1.0"
pipenv = "^2023.6.18"
platformdirs = "^2.6.2"
pycodestyle = "^2.11.0"
pydantic = "^1.10.2"
pydocstyle = "^6.3.0"
pyflakes = "^3.1.0"
pyTelegramBotAPI = "^4.9.0"
python = "^3.10"
python-dotenv = "^0.21.0"
python-gettext = "^5.0"
pytz = "^2023.3"
PyYAML = "^6.0.1"
referencing = "^0.30.2"
requests = "^2.28.1"
rpds-py = "^0.9.2"
snowballstemmer = "^2.2.0"
sqlparse = "^0.4.4"
typing_extensions = "^4.4.0"
tzdata = "^2023.3"
uritemplate = "^4.1.1"
urllib3 = "^1.26.13"
virtualenv = "^20.17.1"
virtualenv-clone = "^0.5.7"
whitenoise = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"